# uv1-todo-0

./: .env.local.example  README.md  change-request.cs.md  pyproject.toml
.codespeak/: build_insight.json  codespeak_state.json  external_apis.json  implemented_change_requests.json  last_checkpoint_in_user_area.json  last_successful_checkpoint.json  methods_to_test.json  methods_to_test_raw.json  runs_history.json  sha_to_checkpoint.json  spec.processed.md  test_reports.txt
django_app/: adapters.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
django_app/migrations/: 0001_initial.py  0002_todo_user.py  0003_alter_todo_user.py  0004_todo_deleted_at.py
django_app/templates/django_app/: login.html  todo_list.html  trash.html
django_proj/: settings.py  urls.py
spec/: main.cs.md
tests/: test_auth.py  test_models.py  test_signals.py  test_views.py
